force-app/main/default/objects/stripeGC__Stripe_Account__c/stripeGC__Stripe_Account__c.object-meta.xml
<CustomObject>
    <label>Stripe Account</label>
    <nameField>
        <label>Stripe Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>