force-app/main/default/objects/stripeGC__Stripe_Account__c/fields/stripeGC__Is_Live_Mode__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Is_Live_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Live Mode</label>
    <type>Checkbox</type>
</CustomField>