force-app/main/default/objects/stripeGC__Stripe_Account__c/fields/stripeGC__Is_Platform__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Is_Platform__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Platform</label>
    <type>Checkbox</type>
</CustomField>