force-app/main/default/objects/stripeGC__Stripe_Account__c/fields/stripeGC__Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>