force-app/main/default/objects/stripeGC__Stripe_Account__c/fields/stripeGC__Stripe_Connection_Mode__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Stripe_Connection_Mode__c</fullName>
    <defaultValue>&quot;connect&quot;</defaultValue>
    <label>Stripe Connection Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>apps</fullName>
                <default>true</default>
                <label>apps</label>
            </value>
            <value>
                <fullName>connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>